        - autoswap list generation
        - persistent mini-filesystem in EEPROM
        - Maniac Mansion + Zak McKracken loaders
        - Sam's Journey loader
        - allow comments in swap lists
        - disable P00 header for .crt and .tcrt
        - support mounting certain D41 images with more than 35 tracks
        - Bugfix: Prevent error when parsing one-character commands

2012-02-26 - release 0.10.3
        - Bugfix: Un-break I2C display communication

2011-12-18 - release 0.10.2
        - Bugfix: End of generated raw directory was incorrect
        - Bugfix: Various compilation fixes when fastloaders are disabled
        - ULoad M3 automatically exits when ATN becomes active
        - Minor code space improvements
        - New fastloader: ELoad Version 1 (EasyProg)

2010-12-25 - release 0.10.1
        - Bugfix: Remove remains of previous commands while parsing B-*
        - Bugfix: Fix response of UI command for unknown suffix chars
        - small improvement of JiffyDOS transfer speeds

2010-11-07 - release 0.10.0
        - Deprecation notice:
          E-R and E-W commands will be removed in the next release
        - Improved reliability of Nippon loader

2010-10-31 - release 0.10.0pre5
        - Bugfix: Avoid duplicate file name when DEL/DIR matches
        - Bugfix: Reduce chance of data corruption in Wheels
        - Bugfix: Slightly relax IEC timing while waiting for command
        - Added AR6 1581 fastloader+saver (PAL)

2010-10-26 - release 0.10.0pre4
        - Bugfix: Wheels with SuperCPU timing issue corrected
        - Bugfix: Rare problem with ~ in FAT file names fixed
        - Added compile-time option to capture fastloader code
        - Added Wheels 4.4 fast loaders
        - Added another variation of the Epyx Fastload cart
        - Added Nippon fast loader

2010-10-16 - release 0.10.0pre3
        - Bugfix: Wheels 128 loader detection fixed
        - Added a second Epyx Fastload variation

2010-10-15 - release 0.10.0pre2