@@ -16,6 +16,7 @@
         - disable P00 header for .crt and .tcrt
         - support mounting certain D41 images with more than 35 tracks
         - Bugfix: Prevent error when parsing one-character commands
+        - New fastloader: Ultraboot
 
 2012-02-26 - release 0.10.3
         - Bugfix: Un-break I2C display communication
